<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/year_selection_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        app:tabTextColor="@color/color_text_amount_white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/month_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:background="@drawable/selector_comment_pressed"
            android:text="@string/jan"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView4"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:text="@string/feb"
            android:background="@drawable/selector_comment_pressed"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView5"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:text="@string/mar"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:background="@drawable/selector_comment_pressed"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_chainStyle="spread" />


        <TextView
            android:id="@+id/textView6"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:text="@string/apr"
            android:background="@drawable/selector_comment_pressed"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView7"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:background="@drawable/selector_comment_pressed"
            android:layout_marginBottom="8dp"
            android:text="@string/may"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView8"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:text="@string/june"
            android:background="@drawable/selector_comment_pressed"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView9"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:background="@drawable/selector_comment_pressed"
            android:text="@string/july"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:background="@drawable/selector_comment_pressed"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/aug"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:background="@drawable/selector_comment_pressed"
            android:text="@string/sept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView12"
            android:background="@drawable/selector_comment_pressed"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:text="@string/oct"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView13"
            style="@style/DatePickerTextTheme"
            android:background="@drawable/selector_comment_pressed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nov"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toStartOf="@+id/textView14"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            style="@style/DatePickerTextTheme"
            android:layout_width="0dp"
            android:text="@string/dec"
            android:background="@drawable/selector_comment_pressed"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>