<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    android:transitionName="main_edit_transition_shared"
    android:background="@drawable/selector_list_clicked">


    <ImageView
        android:id="@+id/listitem_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listitem_major_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/listitem_major_category"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/color_text_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listitem_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listitem_remarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/listitem_remarks"
        android:textSize="10sp"
        android:textColor="@color/color_text_main"
        app:layout_constraintStart_toEndOf="@+id/listitem_icon"
        app:layout_constraintTop_toBottomOf="@+id/listitem_major_category" />

    <TextView
        android:id="@+id/listitem_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/listitem_amount"
        android:textColor="@color/color_text_amount_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listitem_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/listitem_time"
        android:textColor="@color/color_text_main"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/listitem_amount"
        app:layout_constraintTop_toBottomOf="@+id/listitem_amount" />


</androidx.constraintlayout.widget.ConstraintLayout>