<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorForHead"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/comment_dialog_icon"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_comment"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/comment_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="标题"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/color_text_amount_white"
            android:textSize="20sp"/>

    </LinearLayout>

    <com.gang.economico.ui.customs.GangEditText
        android:id="@+id/comment_dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_write_something"
        android:textSize="18sp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        app:underlineWidth="2dp"
        app:numTextSize="10sp"
        android:textColor="@color/color_text_amount_white"
        android:fontFamily="@font/roboto_regular_family"
        android:layout_margin="8dp"
        app:underlineNeeded="true"
        android:textColorHint="@color/color_text_main"
        app:underlineColorNormal="@color/color_text_main"
        app:underlineColorFocused="@color/colorSecondaryAccent"
        app:numTextColorNormal="@color/colorSecondaryAccent"
        app:numTextColorFilled="@color/edit_text_full_color"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/selector_comment_pressed"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/comment_cancel"
            android:textColor="@color/colorSecondaryAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_confirm"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/selector_comment_pressed"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/comment_confirm"
            android:textColor="@color/colorSecondaryAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>